--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,6 +28,6 @@ jobs:
       uses: actions/upload-artifact@v3.0.0
       with:
         # Artifact name
-       #name: 
-       # A file, directory or wildcard pattern that describes what to upload
-       path: m1mc
+        name: m1mc
+        # A file, directory or wildcard pattern that describes what to upload
+        path: m1mc
